--- a/web.css
+++ b/web.css
@@ -103,3 +103,24 @@ nav a {
   padding: 40px;
   text-align: center;
 }
+/* Navigation Bar */
+        .navbar {
+            background-color: #8B5E3B; /* Brown color */
+            overflow: hidden;
+            padding: 15px;
+            text-align: center;
+        }
+
+        .navbar a {
+            color: white;
+            text-decoration: none;
+            padding: 14px 20px;
+            display: inline-block;
+            font-size: 18px;
+        }
+
+        .navbar a:hover, .navbar a.active {
+            background-color: #654321; /* Darker Brown */
+
+
+
